# wiresmash

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: build.yml  clang-format.yml
hooks/: format-hook
include/: headers.txt  macros.h
include/conductor/: Conductor.h  Controlable.h  Controllable.h  ControllerHandler.h  ScheduleHandler.h
include/engine/: entity.h  universe_master.h
include/entity/: README.MD  README.md  character.h  controlable.h  controllable.h  drawable_handler.h  entity.h  physicalEntity.h  physical_entity.h  schedulable.h  wall.h
include/graphics/: display.h
include/lib/: forces.h  lib.h
include/phx/: collision.h  (+4 more)
settings/: keybinds
src/: CMakeLists.txt  main.cpp  main.cppp
src/conductor/: Conductor.cpp  Controllable.cpp
src/engine/: CMakeLists.txt  entity.cpp  universe_master.cpp
src/engine/box/: CMakeLists.txt  box.cpp  box.tpp  rectangle.cpp  rectangle.tpp
src/engine/hitbox/: CMakeLists.txt  hitbox.cpp  line.cpp  rectangle.cpp
src/engine/physic/: CMakeLists.txt  cinematic.cpp  phxbox.cpp  physic.cpp
src/engine/physics/: CMakeLists.txt  cinematic.cpp  kinematics.cpp  phxbox.cpp  physic.cpp  point.cpp
src/entity/: character.cpp  entity.cpp  multi_drawable.cpp  physical_entities.cpp  physical_entity.cpp
src/entity/strategies/: controllable.cpp  damageable.cpp  multi_drawable.cpp  physical_entity.cpp  physical_entity.mathieu.cpp  strategy.cpp
src/game/: CMakeLists.txt
src/game/entity/: CMakeLists.txt
src/game/entity/dev/: CMakeLists.txt  blue_terrain.cpp  controllable.cpp  red_square.cpp
src/graphics/: CMakeLists.txt  display.cpp
src/phx/: README.md  collision.cpp  hitbox.cpp  phx.cpp
src/settings/: CMakeLists.txt  input_reader.cpp
test/: CMakeLists.txt  testMain.cpp
(+26 files in other folders)
